--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       resultado.textContent = "Buscando...";
 
       try {
-        const response = await fetch("https://tu-id-en-m2-backend.onrender.com/consultar-id", {
+        const response = await fetch("https://tu-id-en-m2-backend-1.onrender.com/consultar-id", {
           method: "POST",
           headers: {
             "Content-Type": "application/json"
